--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap');
 
+body {
+    margin: 0;
+    padding: 0;
+}
+
 #root {
     font-family: 'Montserrat', sans-serif;
+    background: #111318;
+    height: 100dvh;
+    padding: 0;
+    margin: 0;
 }
