--- a/frontend/src/styles/components/headers/mainHeader.css
+++ b/frontend/src/styles/components/headers/mainHeader.css
@@ -81,3 +81,137 @@ header .loginButton {
         background: #8A7EF5;
     }
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap');
+
+header {
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.25);
+    background: #0B0C10;
+    display: flex;
+    justify-content: space-between;
+    color: white;
+    align-items: center;
+    padding: 0 30px;
+}
+
+header h1{
+    font-size: 2rem;
+}
+
+header .search-bar {
+    display: flex;
+    height: fit-content;
+    gap: 4px;
+    background: rgba(255, 255, 255, 0.2);
+    padding: 1px 5px;
+    border-radius: 25px;
+}
+
+header .search-bar input {
+    height: fit-content;
+    background: none;
+    color: white;
+    font-size: 1rem;
+}
+
+header .search-icon {
+    fill: white;
+}
+
+.search-input {
+    background: none;
+    border: none;
+    outline: none;
+    color: white;
+    font-size: 14px;
+    padding: 4px 8px;
+    width: 400px;
+}
+
+.search-input::placeholder {
+    color: rgba(255, 255, 255, 0.5);
+}
+
+.search-input:focus {
+    outline: none;
+    box-shadow: none;
+}
+
+.search-input:-webkit-autofill,
+.search-input:-webkit-autofill:hover,
+.search-input:-webkit-autofill:focus,
+.search-input:-webkit-autofill:active {
+    -webkit-box-shadow: 0 0 0 1000px #0B0C10 inset !important;
+    -webkit-text-fill-color: white !important;
+}
+
+header .loginButton {
+    background: #6E5BFF;
+    border: none;
+    padding: 5px 35px;
+    color: white;
+    font-size: 1.2rem;
+    border-radius: 35px;
+    cursor: pointer;
+
+    &:hover {
+        background: #8A7EF5;
+    }
+}
+
+@media (max-width: 900px) {
+    header {
+        padding: 0 20px;
+    }
+
+    header h1 {
+        font-size: 1.7rem;
+    }
+
+    header .search-input {
+        width: 250px;
+        font-size: 0.9rem;
+    }
+
+    header .loginButton {
+        padding: 5px 25px;
+        font-size: 1rem;
+    }
+}
+
+@media (max-width: 600px) {
+    header {
+        padding: 0 15px;
+        gap: 10px;
+    }
+
+    header h1 {
+        font-size: 1.4rem;
+    }
+
+    header .search-bar {
+        padding: 1px 8px;
+        gap: 6px;
+        border-radius: 20px;
+        display: none;
+    }
+
+    .search-input {
+        width: 160px;
+        font-size: 0.85rem;
+    }
+
+    header .loginButton {
+        padding: 5px 20px;
+        font-size: 0.8rem;
+    }
+}
+
+
