--- a/frontend/src/styles/components/navbars/mainNavbar.css
+++ b/frontend/src/styles/components/navbars/mainNavbar.css
@@ -14,6 +14,13 @@
     width: 200px;
     border-right: 2px solid rgba(255, 255, 255, 0.25);
     gap: 28px;
+    transform: translateX(-100%);
+    transition: transform 0.5s;
+
+}
+
+.mainNavbar.open {
+    transform: translateX(0);
 }
 
 .mainNavbar .createButton {
