--- a/frontend/src/styles/components/headers/mainHeader.css
+++ b/frontend/src/styles/components/headers/mainHeader.css
@@ -14,7 +14,7 @@
     justify-content: space-between;
     color: white;
     align-items: center;
-    padding: 0 30px;
+    padding: 10px 30px;
     z-index: 99;
 }
 
@@ -63,9 +63,10 @@
     height: fit-content;
     gap: 4px;
     background: rgba(255, 255, 255, 0.2);
-    padding: 1px 5px;
+    padding: 5px 5px;
     border-radius: 25px;
-    width: 300px;
+    width: 500px;
+    align-items: center;
 }
 
 .main-header .search-bar .search-input {
@@ -133,11 +134,15 @@
 
 @media (max-width: 900px) {
     .main-header {
-        padding: 0 20px;
+        padding: 10px 20px;
     }
 
     .main-header h1 {
         font-size: 1.7rem;
+    }
+
+    .main-header .search-bar {
+        width: 300px;
     }
 
     .main-header .search-input {
@@ -153,7 +158,7 @@
 
 @media (max-width: 600px) {
     .main-header {
-        padding: 0 15px;
+        padding: 10px 15px;
         gap: 10px;
     }
 
