--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -3,6 +3,15 @@
 body {
     margin: 0;
     padding: 0;
+    background: #111318;
+    width: 100dvw;
+    object-fit: cover;
+}
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 #root {
