add registration with adaptation

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,6 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap');
-
-body {
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap');body {
     margin: 0;
     padding: 0;
     background: #111318;
