--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -12,6 +12,11 @@
     box-sizing: border-box;
 }
 
+body, html {
+    padding: 0;
+    margin: 0;
+}
+
 #root {
     font-family: 'Montserrat', sans-serif;
     background: #111318;
