--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -23,7 +23,10 @@ body, html {
     padding: 0;
     margin: 0;
     z-index: 0;
-    overflow: hidden;
+    height: 100dvh; 
+    position: relative;
+
+
 }
 
 a, button {
