--- a/frontend/src/styles/pages/login.css
+++ b/frontend/src/styles/pages/login.css
@@ -26,25 +26,25 @@
     border: 1.5px solid rgba(255, 255, 255, 0.3);
 }
 
-.login-header {
+.loginPage-header {
     display: flex;
     justify-content: space-between;
     padding: 0 25px;
 }
 
-.login-header h1 {
+.loginPage-header h1 {
     font-size: 2rem;
     font-weight: 700;
     cursor: pointer;
 }
 
-.login-header h1:nth-child(1) {
+.loginPage-header h1:nth-child(1) {
     color: #6E5BFF;
     display: flex;
     flex-direction: column;
 }
 
-.login-header h1:nth-child(1)::after {
+.loginPage-header h1:nth-child(1)::after {
     content: '';
     width: 100%;
     height: 6px;
