--- a/frontend/src/styles/pages/user.css
+++ b/frontend/src/styles/pages/user.css
@@ -6,6 +6,7 @@
     flex-direction: column;
     padding-bottom: 110px;
     object-fit: cover;
+	overflow-y: hidden;
 }
 
 .userWindow .userCard {
@@ -27,7 +28,7 @@
 .userWindow .userCard .userInfo .userLine {
 	display: flex;
 	justify-content: space-between;
-	width: 50%;
+	width: 850px;
 	align-items: center;
 }
 
@@ -95,6 +96,49 @@
 	font-size: 1.5rem;
 }
 
+
+@media (max-width: 1200px) {
+	.userWindow .userCard .userInfo .userLine {
+		width: 700px;
+	}
+
+	.userWindow .userCard .userInfo .userLine .userNameAvatar img{
+		height: 4rem;
+
+	}
+
+	.userWindow .userCard .userInfo .userLine .userNameAvatar h1{
+		font-size: 4rem;
+	}
+
+	.userWindow .userCard .userInfo .userLine .followButton{
+		font-size: 1.5rem;
+	}
+}
+
+@media (max-width: 1000px) {
+	.userWindow .userCard .userInfo {
+		gap: 50px;
+	}
+
+	.userWindow .userCard .userInfo .userLine {
+		width: 600px;
+	}
+
+	.userWindow .userCard .userInfo .userLine .userNameAvatar img{
+		height: 3rem;
+
+	}
+
+	.userWindow .userCard .userInfo .userLine .userNameAvatar h1{
+		font-size: 3rem;
+	}
+
+	.userWindow .userCard .userInfo .userLine .followButton{
+		padding: 10px 20px;
+	}
+}
+
 @media (max-width: 900px) {
     .userPage {
         padding-top: 50px;
@@ -102,8 +146,137 @@
     }
 }
 
+@media (max-width: 850px) {
+	.userWindow .userCard .userInfo .userLine {
+		width: 500px;
+	}
+
+	.userWindow .userCard .userInfo .userLine .userNameAvatar img{
+		height: 3rem;
+
+	}
+
+	.userWindow .userCard .userInfo .userLine .userNameAvatar h1{
+		font-size: 3rem;
+	}
+
+	.userWindow .userCard .userInfo .userLine .followButton{
+		padding: 10px 20px;
+	}
+}
+
+@media (max-width: 800px) {
+	.userWindow .userCard .userStats {
+		gap: 50px;
+	}
+
+
+	.userWindow .userCard .userStats .userStatCard{
+		gap: 8px ;
+	}
+
+	.userWindow .userCard .userStats h1{
+		font-size: 1.8rem;
+	}
+
+	.userWindow .userCard .userStats h2{
+		font-size: 1rem;
+	}
+}
+
 @media (max-width: 600px) {
     .userPage {
         padding-left: 0;
     }
+
+	.userWindow .userCard .userInfo .userLine {
+		width: 90%;
+	}
+
+	.userWindow .userCard .userInfo .userLine .userNameAvatar img{
+		height: 2rem;
+
+	}
+
+	.userWindow .userCard .userInfo .userLine .userNameAvatar h1{
+		font-size: 2rem;
+	}
+
+	.userWindow .userCard .userInfo .userLine .followButton{
+		padding: 10px 20px;
+		font-size: 1.8rem;
+	}
+}
+
+@media (max-width: 500px) {
+	.userWindow .userCard .userInfo .userLine .userNameAvatar {
+		gap: 8px;
+	}
+
+	.userWindow .userCard .userInfo .userLine .followButton{
+		padding: 5px 20px;
+		font-size: 1.4rem;
+	}
+
+	.userWindow .userCard .userStats {
+		gap: 20px;
+	}
+
+	.userWindow .userCard .userStats .userStatCard{
+		gap: 8px ;
+	}
+
+	.userWindow .userCard .userStats h1{
+		font-size: 1.4rem;
+	}
+
+	.userWindow .userCard .userStats h2{
+		font-size: 1rem;
+	}
+}
+
+@media (max-width: 400px) {
+	.userWindow .userCard .userInfo .userLine {
+		width: 90%;
+	}
+
+	.userWindow .userCard .userInfo .userLine .userNameAvatar img{
+		height: 1.5rem;
+
+	}
+
+	.userWindow .userCard .userInfo .userLine .userNameAvatar h1{
+		font-size: 1.5rem;
+	}
+
+	.userWindow .userCard .userInfo .userLine .followButton{
+		padding: 10px 20px;
+		font-size: 1rem;
+	}
+
+	.userWindow .userCard .userInfo p {
+		font-size: 1.2rem;
+	}
+
+	.userWindow .userCard {
+		padding: 75px 0 50px 0;
+		gap: 40px;
+	}
+
+	.userWindow .userCard .userStats {
+		gap: 20px;
+	}
+
+	.userWindow .userCard .userStats .userStatCard{
+		gap: 8px ;
+		padding: 10px 15px;
+	}
+
+	.userWindow .userCard .userStats h1{
+		font-size: 1.1rem;
+	}
+
+	.userWindow .userCard .userStats h2{
+		font-size: 0.9rem;
+	}
 }
