--- a/frontend/src/styles/pages/user.css
+++ b/frontend/src/styles/pages/user.css
@@ -51,16 +51,20 @@
 	font-size: 5rem;
 }
 
-.userWindow .userCard .userInfo .userLine .followButton{
+.userWindow .userCard .userInfo .userLine .followButton,
+.userWindow .userCard .userInfo .userLine .editButton,
+.userWindow .userCard .userInfo .userLine .unfollowButton {
 	background: #6E5BFF;
 	padding: 15px 35px;
 	border-radius: 35px;
 	font-size: 2rem;
-	color: white;
+	color: white;	
 	outline: 0;
 	border: 0;
 	cursor: pointer;
 }
+
+
 
 .userWindow .userCard .userInfo .userLine .followButton:hover{
 	background: #8a7ef5;
@@ -111,7 +115,9 @@
 		font-size: 4rem;
 	}
 
-	.userWindow .userCard .userInfo .userLine .followButton{
+	.userWindow .userCard .userInfo .userLine .followButton,
+	.userWindow .userCard .userInfo .userLine .editButton,
+	.userWindow .userCard .userInfo .userLine .unfollowButton {
 		font-size: 1.5rem;
 	}
 }
@@ -134,7 +140,9 @@
 		font-size: 3rem;
 	}
 
-	.userWindow .userCard .userInfo .userLine .followButton{
+	.userWindow .userCard .userInfo .userLine .followButton,
+	.userWindow .userCard .userInfo .userLine .editButton,
+	.userWindow .userCard .userInfo .userLine .unfollowButton{
 		padding: 10px 20px;
 	}
 }
@@ -160,7 +168,9 @@
 		font-size: 3rem;
 	}
 
-	.userWindow .userCard .userInfo .userLine .followButton{
+	.userWindow .userCard .userInfo .userLine .followButton,
+	.userWindow .userCard .userInfo .userLine .editButton,
+	.userWindow .userCard .userInfo .userLine .unfollowButton{
 		padding: 10px 20px;
 	}
 }
@@ -202,7 +212,9 @@
 		font-size: 2rem;
 	}
 
-	.userWindow .userCard .userInfo .userLine .followButton{
+	.userWindow .userCard .userInfo .userLine .followButton,
+	.userWindow .userCard .userInfo .userLine .editButton,
+	.userWindow .userCard .userInfo .userLine .unfollowButton{
 		padding: 10px 20px;
 		font-size: 1.8rem;
 	}
@@ -249,7 +261,9 @@
 		font-size: 1.5rem;
 	}
 
-	.userWindow .userCard .userInfo .userLine .followButton{
+	.userWindow .userCard .userInfo .userLine .followButton,
+	.userWindow .userCard .userInfo .userLine .editButton,
+	.userWindow .userCard .userInfo .userLine .unfollowButton{
 		padding: 10px 20px;
 		font-size: 1rem;
 	}
